--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>20201216 - Examen 1ª Evaluación</name>
+	<name>Examen de la 1ª Evaluación - NO PRESENCIAL</name>
 	<comment></comment>
 	<projects>
 	</projects>
